--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -17,6 +17,7 @@ body {
   font-family: u.$font;
   background-color: var(--background-color);
   color: var(--text-color);
+  margin-block-end: 50vh; // temporary
 }
 
 .visually-hidden {
@@ -26,4 +27,13 @@ body {
   width: 1px;
   height: 1px;
   overflow: hidden;
+
+  &:focus {
+    left: 0;
+    width: auto;
+    height: auto;
+    background-color: #fff;
+    padding: 0.5rem;
+    border: 1px solid;
+  }
 }
