--- a/app/scss/globals/_colors.scss
+++ b/app/scss/globals/_colors.scss
@@ -2,6 +2,7 @@
   --main-bg: hsl(0, 0%, 100%);
   --text-dark: hsl(233, 14%, 25%);
   --text-light: hsl(0, 0%, 100%);
+  --header-bg: hsl(232, 58%, 55%);
   --hero-bg: hsl(232, 58%, 55%);
   --button-dash-primary-bg: hsl(180, 100%, 42%);
   --button-primary-text: hsl(233, 14%, 25%);
