--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -20,6 +20,12 @@ body {
   margin-block-end: 50vh; // temporary
 }
 
+img {
+  display: block; // Global block style for the img tag, to remove the space below the image
+  width: 100%; // globale width 100% for all images. better to set the image-size sperately for each, to avoid wierd behavior. (flex)
+  height: auto; // also for the height
+}
+
 .visually-hidden {
   position: absolute;
   left: -10000px;
