--- a/app/scss/globals/_colors.scss
+++ b/app/scss/globals/_colors.scss
@@ -4,11 +4,14 @@
   --text-light: hsl(0, 0%, 100%);
   --header-bg: hsl(232, 58%, 55%);
   --hero-bg: hsl(232, 58%, 55%);
-  --button-dash-primary-bg: hsl(180, 100%, 42%);
+  --button-primary-bg: hsl(180, 100%, 42%);
+  --button-primary-bg-hover: hsl(180, 100%, 37%);
   --button-primary-text: hsl(233, 14%, 25%);
   --button-secondary-bg: transparent;
+  --button-secondary-bg-hover: hsl(0, 0%, 100%);
   --button-secondary-border: hsl(0, 0%, 100%);
   --button-secondary-text: hsl(0, 0%, 100%);
+  --button-secondary-text-hover: hsl(232, 58%, 55%);
   --fullwidth-bg: hsl(320, 85%, 41%);
 }
 
