--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -26,6 +26,11 @@ img {
   height: auto; // also for the height
 }
 
+figure,
+blockquote {
+  margin: 0;
+}
+
 .visually-hidden {
   position: absolute;
   left: -10000px;
