--- a/app/scss/globals/_colors.scss
+++ b/app/scss/globals/_colors.scss
@@ -6,6 +6,8 @@
   --hero-bg: hsl(232, 58%, 55%);
   --button-primary-bg: hsl(180, 100%, 42%);
   --button-primary-bg-hover: hsl(180, 100%, 37%);
+  --button-primary-white-bg: hsl(0, 0%, 100%);
+  --button-primary-white-bg-hover: hsl(0, 0%, 90%);
   --button-primary-text: hsl(233, 14%, 25%);
   --button-secondary-bg: transparent;
   --button-secondary-bg-hover: hsl(0, 0%, 100%);
@@ -13,12 +15,7 @@
   --button-secondary-text: hsl(0, 0%, 100%);
   --button-secondary-text-hover: hsl(232, 58%, 55%);
   --fullwidth-bg: hsl(320, 85%, 41%);
-}
-
-.magenta {
-  background-color: hsl(300, 100%, 28%);
-}
-
-.green {
-  background-color: hsl(120, 100%, 19%);
+  --gradient1: hsl(233, 14%, 25%);
+  --gradient2: hsl(232, 58%, 55%);
+  --gradient3: hsl(180, 100%, 42%);
 }
