--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -31,6 +31,16 @@ blockquote {
   margin: 0;
 }
 
+header ul,
+footer ul {
+  margin: 0;
+  padding: 0;
+
+  li {
+    list-style-type: none;
+  }
+}
+
 .visually-hidden {
   position: absolute;
   left: -10000px;
@@ -46,5 +56,11 @@ blockquote {
     background-color: #fff;
     padding: 0.5rem;
     border: 1px solid;
+  }
+}
+
+.hover-fade {
+  &:hover {
+    opacity: 0.8;
   }
 }
