--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -1,36 +1,45 @@
 @use '../util/' as u;
 
 .hero {
+  --wave-height: clamp(
+    1.3125rem,
+    -0.36363636363636376rem + 7.151515151515151vw,
+    5rem
+  );
+
   background-color: var(--header-bg);
   color: var(--text-light);
+  padding-block-start: 40px;
 
-  &__wrapper {
-    display: flex;
-    flex-direction: column;
+  &__wave {
+    height: var(--wave-height);
+  }
+
+  &__content {
+    display: grid;
     gap: 40px;
-    align-items: center;
-    padding-block: 30px 60px; // in px, bc. we don't want to increase the padding with the screen
+    margin-block-end: calc(60px + var(--wave-height));
 
     @include u.breakpoint(large) {
-      padding-block: 40px 80px;
-      flex-direction: row-reverse;
-      gap: 10%;
+      grid-template-columns: 6fr 5fr;
+      margin-block-end: 0;
     }
   }
 
   &__image {
     width: 61%;
     max-width: u.rem(483);
+    justify-self: center;
 
     @include u.breakpoint(large) {
-      flex: 5;
+      width: 100%;
+      padding-block-start: 30px;
+      order: 2;
+      justify-self: end;
     }
   }
 
   &__text {
-    @include u.breakpoint(large) {
-      flex: 6;
-    }
   }
 
   &__button {
