--- a/app/scss/components/_alt-feature.scss
+++ b/app/scss/components/_alt-feature.scss
@@ -1,14 +1,39 @@
 @use '../util/' as u;
 
 .alt-feature {
+  &__wrapper {
+    display: grid;
+    gap: 60px;
+
+    @include u.breakpoint('large') {
+      gap: 80px;
+    }
+  }
+
   &__row {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+
+    @include u.breakpoint('large') {
+      flex-direction: row;
+      gap: 8%;
+    }
   }
 
   &__image {
     width: auto;
-    max-width: 100%; // Ensures the image doesn't overflow on smaller viewports
+    max-width: u.rem(200);
+
+    @include u.breakpoint('large') {
+      max-width: 100%; // Ensures the image doesn't overflow on smaller viewports
+    }
   }
 
   &__text {
+    p {
+      margin-block-end: 0;
+    }
   }
 }
