coding problem quotation

--- a/app/scss/components/_testimonial.scss
+++ b/app/scss/components/_testimonial.scss
@@ -9,6 +9,20 @@
     width: 16%;
     max-width: u.rem(78);
     margin-block-end: clamp(u.rem(20), 0.68rem + 2.42vw, u.rem(40));
+
+    @include u.breakpoint(xlarge) {
+      position: absolute;
+
+      &:first-child {
+        translate: calc(-100% - 40px) -30px;
+      }
+
+      &:nth-child(3) {
+        rotate: 180deg;
+        left: calc(100% + 40px);
+        translate: 0 calc(-10px - 100%);
+      }
+    }
   }
 
   &__quote {
