--- a/app/scss/components/_testimonial.scss
+++ b/app/scss/components/_testimonial.scss
@@ -10,7 +10,7 @@
     max-width: u.rem(78);
     margin-block-end: clamp(u.rem(20), 0.68rem + 2.42vw, u.rem(40));
 
-    @include u.breakpoint(xlarge) {
+    @include u.breakpoint(large) {
       position: absolute;
 
       &:first-child {
@@ -18,9 +18,9 @@
       }
 
       &:nth-child(3) {
+        outline: 2px solid red;
         rotate: 180deg;
         left: calc(100% + 40px);
-        translate: 0 calc(-10px - 100%);
       }
     }
   }
