--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -20,6 +20,11 @@ body {
   margin-block-end: 50vh; // temporary
 }
 
+input,
+button {
+  font-family: u.$font;
+}
+
 img {
   display: block; // Global block style for the img tag, to remove the space below the image
   width: 100%; // globale width 100% for all images. better to set the image-size sperately for each, to avoid wierd behavior. (flex)
