topnavigation hamburger menu js

--- a/app/scss/globals/_colors.scss
+++ b/app/scss/globals/_colors.scss
@@ -7,6 +7,8 @@
   --link-gradient1: hsl(180, 100%, 42%);
   --link-gradient2: hsl(50, 99%, 53%);
   --hero-bg: hsl(232, 58%, 55%);
+  --menu-shadow: hsla(232, 58%, 35%, 60%);
+  --menu-overlay: hsla(233, 14%, 25%, 40%);
   --button-primary-bg: hsl(180, 100%, 42%);
   --button-primary-bg-hover: hsl(180, 100%, 37%);
   --button-primary-white-bg: hsl(0, 0%, 100%);
