--- a/app/scss/components/_topnav.scss
+++ b/app/scss/components/_topnav.scss
@@ -1,6 +1,10 @@
 @use '../util/' as u;
 
 .topnav {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+
   &,
   &__menu {
     background-color: var(--header-bg);
@@ -28,6 +32,22 @@
     }
   }
 
+  &__overlay {
+    @include u.breakpoint-down(small) {
+      position: fixed;
+      inset: 0;
+      background-color: var(--menu-overlay);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity ease-in-out;
+
+      &:has(+ .topnav__open[aria-expanded='true']) {
+        opacity: 1;
+        pointer-events: all;
+      }
+    }
+  }
+
   &__open,
   &__close {
     background: none;
@@ -36,15 +56,35 @@
   }
 
   &__open {
+    @include u.breakpoint(medium) {
+      display: none;
+    }
+
+    &[aria-expanded='true'] + .topnav__menu {
+      translate: 0 0;
+
+      @media (prefers-reduced-motion) {
+        opacity: 1;
+      }
+    }
   }
 
   &__menu {
     @include u.breakpoint-down(small) {
       position: fixed;
+
       inset: 0 0 auto 0;
       padding: 12px 24px 120px;
       border-radius: 0 0 20px 20px;
-      outline: 2px solid yellow;
+      box-shadow: 0 12px 12px var(--menu-shadow);
+      translate: 0 -106%;
+      transition: translate ease-in-out;
+
+      @media (prefers-reduced-motion) {
+        tranlate: none;
+        opacity: 0;
+        transition-property: opacity;
+      }
     }
   }
 
@@ -65,6 +105,12 @@
     @include u.breakpoint-down(small) {
       flex-direction: column;
       align-items: center;
+    }
+  }
+
+  &__item:first-child {
+    @include u.breakpoint(medium) {
+      display: none;
     }
   }
 
