--- a/app/scss/components/_testimonial.scss
+++ b/app/scss/components/_testimonial.scss
@@ -1,6 +1,19 @@
 @use '../util/' as u;
 
 .testimonial {
+  --testimonial-bg: var(--main-bg);
+  --testimonial-text: var(--text-dark);
+  --testimonial-icon: hsl(180, 100%, 42%);
+
+  background-color: var(--testimonial-bg);
+  color: var(--testimonial-text);
+
+  &.dark {
+    --testimonial-bg: hsl(232, 58%, 55%);
+    --testimonial-text: var(--text-light);
+    --testimonial-icon: hsla(0, 0%, 100%, 50%);
+  }
+
   &__wrapper {
     max-width: u.rem(800);
   }
@@ -32,6 +45,10 @@
       &:nth-child(3) {
         display: none;
       }
+    }
+
+    path {
+      fill: var(--testimonial-icon);
     }
   }
 
