--- a/app/scss/globals/_colors.scss
+++ b/app/scss/globals/_colors.scss
@@ -19,6 +19,9 @@
   --button-secondary-border: hsl(0, 0%, 100%);
   --button-secondary-text: hsl(0, 0%, 100%);
   --button-secondary-text-hover: hsl(232, 58%, 55%);
+  --blog-graident1: hsl(245, 75%, 39%);
+  --blog-graident2: hsl(320, 85%, 41%);
+  --blog-shadow: hsla(233, 14%, 25%, 40%);
   --fullwidth-bg: hsl(320, 85%, 41%);
   --gradient1: hsl(233, 14%, 25%);
   --gradient2: hsl(232, 58%, 55%);
