--- a/app/scss/components/_topnav.scss
+++ b/app/scss/components/_topnav.scss
@@ -81,7 +81,7 @@
       transition: translate ease-in-out;
 
       @media (prefers-reduced-motion) {
-        tranlate: none;
+        translate: none;
         opacity: 0;
         transition-property: opacity;
       }
